[tool.poetry]
name = "vault"
version = "3.0.0"
description = "This is an additional implementation compared to the hvac module. The main purpose of which is to simplify the use and interaction with vault for my standard projects. This module contains a set of methods for working with secrets and database engines in vault."
authors = ["Bervinov Oleg <obervinov@pm.me>"]
maintainers = ["Bervinov Oleg <obervinov@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vault"}]
homepage = "https://github.com/obervinov/vault-package"
repository = "https://github.com/obervinov/vault-package"
documentation = "https://github.com/obervinov/vault-package/blob/main/README.md"
keywords = ["vault", "vault-api", "vault-server", "secrets", "vault-python"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/vault-package/issues"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11"
requests = ">=2.29.0,<2.30.0"
hvac = "^2"
keyring = "^24"
SecretStorage = "^3"
python-dateutil = "^2"
cryptography = "^42"
idna = "^3"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v1.0.6" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
